k8s/11-auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: sinpeconectacr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: dorianprogrammer/auth-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: sinpeconectacr
spec:
  selector:
    app: auth-service
  ports:
    - port: 3001
      targetPort: 3001
