k8s/12-payments-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-service
  namespace: sinpeconectacr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments-service
  template:
    metadata:
      labels:
        app: payments-service
    spec:
      containers:
        - name: payments-service
          image: dorianprogrammer/payments-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3002
---
apiVersion: v1
kind: Service
metadata:
  name: payments-service
  namespace: sinpeconectacr
spec:
  selector:
    app: payments-service
  ports:
    - port: 3002
      targetPort: 3002
