k8s/14-ia-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ia-service
  namespace: sinpeconectacr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ia-service
  template:
    metadata:
      labels:
        app: ia-service
    spec:
      containers:
        - name: ia-service
          image: dorianprogrammer/ia-service:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
---
apiVersion: v1
kind: Service
metadata:
  name: ia-service
  namespace: sinpeconectacr
spec:
  selector:
    app: ia-service
  ports:
    - port: 3004
      targetPort: 3004
