k8s/30-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sinpeconectacr-ingress
  namespace: sinpeconectacr
  annotations:
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  rules:
    - host: sinpeconectacr.local
      http:
        paths:
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

          - path: /payments
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

          - path: /crm
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

          - path: /ia
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 3000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
